[package]
name = "wasmup"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
hyper = "1.5.0"
tokio = { version = "1.41.1", features = ["full"] }
wasmtime = "26.0.1"
wasmtime-wasi = "26.0.1"
wasmtime-wasi-http = "26.0.1"
